--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "prettier": "npx prettier \"**/*.(js|jsx|ts|tsx)\" --write",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,7 +43,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "husky": "^8.0.3",
     "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier"
+    }
   }
 }
