--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@feathersjs/authentication-client": "^5.0.8",
     "@feathersjs/rest-client": "^5.0.8",
     "@fontsource-variable/lexend": "^5.0.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -32,7 +33,8 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "ignorePatterns":["src/esc-backend/**/*.ts"]
   },
   "browserslist": {
     "production": [
