fixing UI issues

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "fuzz": "npx jazzer \"./src/tests/fuzztarget\" ",
     "prettier": "npx prettier \"**/*.(js|jsx|ts|tsx)\" --write",
     "eject": "react-scripts eject"
   },
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@jazzer.js/core": "^1.5.1",
     "autoprefixer": "^10.4.14",
     "husky": "^8.0.3",
     "postcss": "^8.4.24",
@@ -68,7 +70,9 @@
       "pre-commit": "npm run prettier"
     }
   },
-  "jest":{
-    "watchPathIgnorePatterns": ["<rootDir>/src/esc-backend/"]
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "<rootDir>/src/esc-backend/"
+    ]
   }
 }
