--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
-    "axios": "^1.4.0",
     "history": "^5.3.0",
     "mongodb": "^5.7.0",
     "react": "^18.2.0",
@@ -30,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "fuzz": "npx jazzer \"./src/tests/fuzztarget\" ",
     "prettier": "npx prettier \"**/*.(js|jsx|ts|tsx)\" --write",
     "eject": "react-scripts eject"
@@ -59,11 +58,14 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@jazzer.js/core": "^1.5.1",
+    "@jest/globals": "^29.6.2",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.1"
   },
   "husky": {
     "hooks": {
@@ -74,6 +76,5 @@
     "watchPathIgnorePatterns": [
       "<rootDir>/src/esc-backend/"
     ]
-  },
-  "type": "module"
+  }
 }
