--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "history": "^5.3.0",
+    "jest": "^29.6.2",
     "mongodb": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
