--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -18,6 +18,11 @@ jobs:
         node-version: [20.x]
 
     steps:
+    - uses: oleksiyrudenko/gha-git-credentials@v2.1.1
+      with:
+        global: true
+        actor: 'Lutetium-Vanadium'
+        token: '${{ secrets.ESC_AUTH }}'
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
